--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="calculator">
-            <div class="display"></div>
+            <div class="display">0</div>
             <div class="buttons">
                 <div class="numbers"></div>
                 <div class="operators"></div>
