--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="title">Calculator</div>
         <div class="calculator">
             <div class="display">0</div>
             <div class="buttons">
@@ -16,6 +17,7 @@
                 <div class="operators"></div>
             </div>
         </div>
+        <div class="signature">Made By Colin O'Brien</div>
     </div>
 </body>
 </html>
